# Sky_Mirror

./: .gitignore  Cargo.toml  PHASE_52B_SURFACE_XDG_LIFECYCLE_REMOVAL_PLAN.md  PHASE_52D_LINUX_XDG_TOPLEVEL_UNMAP_CALLBACK_PLAN.md  PHASE_52E_LINUX_XDG_SHELL_COMPILE_SEAM_PLAN.md  SKY_PROJECT_AUDIT.md  phase45_47m_handoff.patch  phase45_47m_handoff_README.txt  phase45_47o_handoff_README.txt  phase45_47q_handoff.patch  phase45_47q_handoff_README.txt  phase45_47r_handoff.patch  phase45_47r_handoff_README.txt
.github/workflows/: ci.yml
docs/: CODEX_ENVIRONMENT_RULES.md  CODEX_PHASE_PROMPT_TEMPLATE.md  CODEX_REBUILD_REPORT.md
docs/phases/: PHASE_51A_NESTED_CLIENT_CONNECTION_PLAN.md  PHASE_51N_MAIN_BASELINE_AUDIT.md  PHASE_52A_SURFACE_XDG_ADMISSION_PLAN.md  PHASE_52B_B_SURFACE_XDG_LEDGER_REMOVAL_PLAN.md  PHASE_52C_CORE_TOPLEVEL_UNMAP_DETACH_PLAN.md  PHASE_52F_XDG_TOPLEVEL_IDENTITY_MAPPING_PLAN.md  PHASE_52G_XDG_LIFECYCLE_CALLBACK_IDENTITY_LOOKUP_PLAN.md  PHASE_52H_RUNTIME_CALLBACK_OBSERVED_PROOF_PLAN.md  PHASE_52I_XDG_SHELL_GLOBAL_OWNER_BOUNDARY_PLAN.md  PHASE_52J_CONTROLLED_CLIENT_TOPLEVEL_HARNESS_PLAN.md  PHASE_52K_WAYLAND_CLIENT_ENDPOINT_DECISION.md  PHASE_52L_LINUX_CLIENT_COMPILE_SEAM_PLAN.md  PHASE_52M_B_LINUX_WL_COMPOSITOR_STATE_OWNER_PLAN.md  PHASE_52M_LINUX_WL_COMPOSITOR_OWNER_PLAN.md  PHASE_52N_CONTROLLED_WL_COMPOSITOR_BIND_PROOF_PLAN.md  PHASE_52O_CONTROLLED_WL_SURFACE_IDENTITY_PROOF_PLAN.md  PHASE_52P_CONTROLLED_XDG_WM_BASE_BIND_PROOF_PLAN.md  PHASE_52Q_CONTROLLED_XDG_SURFACE_CREATION_PROOF_PLAN.md  PHASE_52U_LEDGER_ADMISSION_OWNER_PLAN.md  (+51 more)
src/: main.rs
(+95 files in other folders)
